Add front end setup

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-react-front-end",
+  "name": "Book-Classes-Appointment",
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
